# ocpi-python

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: AUTOMATIC_VERSIONING.md  BRANCH_PROTECTION.md  CODEOWNERS  FUNDING.yml  PYPI_SETUP.md  SECURITY.md  dependabot.yml  pull_request_template.md  setup-branch-protection.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump.yml
docs/: changelog.md  contributing.md  index.md  installation.md  llm-assistance.md  quickstart.md
docs/api/: index.md  v_2_1_1.md  v_2_2_1.md  v_2_3_0.md
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: index.rst  v_2_1_1.rst  v_2_2_1.rst  v_2_3_0.rst
docs/source/tutorial/: crud.rst  crud_example.rst  db_interface_example.rst  push.rst  quickstart.rst
docs/standards/: coding-standards.md  development-workflow.md  index.md  ocpi-compliance.md
docs/tutorials/: bookings.md  cdrs.md  charging_profiles.md  commands.md  crud.md  db_interface.md  index.md  locations.md  push.md  sessions.md  tokens.md
examples/: README.md
examples/basic_cpo/: README.md  auth.py  crud.py  location.json  main.py
examples/bookings/: README.md  auth.py  booking.json  crud.py  main.py
examples/charging_profiles/: README.md  auth.py  charging_profile.json  crud.py  main.py
examples/emsp_sessions/: README.md  auth.py  crud.py  main.py  session.json
examples/full_cpo/: README.md  auth.py  crud.py  main.py
ocpi/: main.py
ocpi/core/: adapter.py  compat.py  config.py  crud.py  data_types.py  dependencies.py  enums.py  logs.py  push.py  schemas.py  status.py  utils.py
ocpi/core/authentication/: authenticator.py  verifier.py
ocpi/core/endpoints/: __init__.py  utils.py
ocpi/core/endpoints/v_2_1_1/: cpo.py  emsp.py  utils.py
ocpi/core/endpoints/v_2_2_1/: __init__.py  cpo.py  emsp.py  utils.py
ocpi/core/endpoints/v_2_3_0/: __init__.py  cpo.py  emsp.py  utils.py
ocpi/core/routers/: __init__.py
ocpi/core/routers/v_2_1_1/: __init__.py
ocpi/core/routers/v_2_2_1/: __init__.py
ocpi/core/routers/v_2_3_0/: __init__.py
ocpi/modules/bookings/: __init__.py
ocpi/modules/bookings/v_2_3_0/: __init__.py  enums.py  schemas.py
ocpi/modules/cdrs/v_2_1_1/: schemas.py
ocpi/modules/cdrs/v_2_2_1/: schemas.py
ocpi/modules/cdrs/v_2_3_0/: enums.py  schemas.py
ocpi/modules/chargingprofiles/v_2_2_1/: background_tasks.py  schemas.py
ocpi/modules/chargingprofiles/v_2_3_0/: background_tasks.py  schemas.py
ocpi/modules/commands/v_2_1_1/: schemas.py
ocpi/modules/commands/v_2_2_1/: schemas.py
ocpi/modules/commands/v_2_3_0/: enums.py  schemas.py
ocpi/modules/credentials/v_2_1_1/: schemas.py
ocpi/modules/credentials/v_2_2_1/: schemas.py
ocpi/modules/credentials/v_2_3_0/: schemas.py
ocpi/modules/hubclientinfo/v_2_2_1/: schemas.py
ocpi/modules/hubclientinfo/v_2_3_0/: schemas.py
ocpi/modules/locations/: schemas.py
ocpi/modules/locations/v_2_1_1/: enums.py  schemas.py
ocpi/modules/locations/v_2_2_1/: enums.py  schemas.py
ocpi/modules/locations/v_2_3_0/: enums.py  schemas.py
ocpi/modules/payments/v_2_3_0/: __init__.py  enums.py  schemas.py
ocpi/modules/sessions/v_2_1_1/: schemas.py
ocpi/modules/sessions/v_2_2_1/: schemas.py
ocpi/modules/sessions/v_2_3_0/: schemas.py
ocpi/modules/tariffs/v_2_1_1/: enums.py  schemas.py
ocpi/modules/tariffs/v_2_2_1/: enums.py  schemas.py
ocpi/modules/tariffs/v_2_3_0/: enums.py  schemas.py
ocpi/modules/tokens/v_2_1_1/: schemas.py
ocpi/modules/tokens/v_2_2_1/: schemas.py
ocpi/modules/tokens/v_2_3_0/: enums.py  schemas.py
ocpi/modules/versions/: enums.py  main.py  schemas.py
ocpi/modules/versions/v_2_1_1/: enums.py  schemas.py
ocpi/modules/versions/v_2_2_1/: enums.py  schemas.py
ocpi/modules/versions/v_2_3_0/: enums.py  schemas.py
ocpi/routers/: __init__.py
ocpi/routers/v_2_1_1/: cpo.py  emsp.py
ocpi/routers/v_2_2_1/: cpo.py  emsp.py
ocpi/routers/v_2_3_0/: __init__.py  cpo.py  emsp.py  ptp.py
py_ocpi/: __init__.py  main.py
py_ocpi/core/: adapter.py  compat.py  config.py  crud.py  data_types.py  enums.py  push.py  schemas.py  utils.py
py_ocpi/core/authentication/: authenticator.py  verifier.py
py_ocpi/core/endpoints/: __init__.py
py_ocpi/core/endpoints/v_2_1_1/: cpo.py  emsp.py  utils.py
py_ocpi/core/endpoints/v_2_2_1/: cpo.py  emsp.py  utils.py
py_ocpi/core/endpoints/v_2_3_0/: __init__.py  cpo.py  emsp.py  utils.py
py_ocpi/core/routers/: __init__.py
py_ocpi/core/routers/v_2_1_1/: __init__.py
py_ocpi/core/routers/v_2_2_1/: __init__.py
py_ocpi/core/routers/v_2_3_0/: __init__.py
py_ocpi/modules/cdrs/v_2_1_1/: schemas.py
py_ocpi/modules/cdrs/v_2_2_1/: schemas.py
py_ocpi/modules/cdrs/v_2_3_0/: schemas.py
py_ocpi/modules/chargingprofiles/v_2_2_1/: background_tasks.py  schemas.py
py_ocpi/modules/chargingprofiles/v_2_3_0/: background_tasks.py  enums.py  schemas.py
py_ocpi/modules/commands/v_2_1_1/: schemas.py
py_ocpi/modules/commands/v_2_2_1/: schemas.py
py_ocpi/modules/commands/v_2_3_0/: schemas.py
py_ocpi/modules/locations/: schemas.py
py_ocpi/modules/payments/: __init__.py
py_ocpi/modules/versions/: __init__.py  main.py  schemas.py
py_ocpi/routers/: __init__.py
py_ocpi/routers/v_2_1_1/: cpo.py  emsp.py
py_ocpi/routers/v_2_2_1/: cpo.py  emsp.py
py_ocpi/routers/v_2_3_0/: cpo.py  emsp.py
scripts/: bump_version.py  ocpi_parser.py
tests/: test_dependency_injection.py  test_main.py  test_pagination.py  test_push.py
tests/test_core/: test_authenticator.py  test_compat.py  test_data_types.py  test_dependencies.py  test_exceptions.py  test_logs.py  test_push.py  test_utils.py  test_verifier.py
tests/test_examples/: __init__.py  conftest.py  test_basic_cpo.py  test_bookings.py  test_charging_profiles.py  test_emsp_sessions.py  test_full_cpo.py
tests/test_modules/: utils.py
tests/test_modules/mocks/: async_client.py
tests/test_modules/test_v_2_3_0/: __init__.py
(+254 files in other folders)
