[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocpi"]
include = ["README.md", "LICENSE"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/docs/",
  "/.github/",
  "/tests/",
  "/.gitignore",
  "/.pre-commit",
  "/Pipfile",
  "/Pipfile.lock",
  "/readthedocs.yaml",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    |^temp|
    |ignore
  )/
  | pyproject.toml
)
'''

[project]
name = "ocpi-python"
description = "A modern Python implementation of the Open Charge Point Interface (OCPI) protocol with FastAPI. Supports OCPI 2.3.0, 2.2.1, and 2.1.1 with Pydantic v2 and production-ready features."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT OR EUPL-1.2"}
dynamic = ["version"]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.9.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "ruff>=0.1.0",
]

[[project.authors]]
name = "ELU Mobility"
email = "dev@elu-energy.it"

[project.urls]
Homepage = "https://github.com/elumobility/ocpi-python"
Repository = "https://github.com/elumobility/ocpi-python"
Documentation = "https://elumobility.github.io/ocpi-python/"
Issues = "https://github.com/elumobility/ocpi-python/issues"
Changelog = "https://github.com/elumobility/ocpi-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "ocpi/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["venv", "tests"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
    "--cov=ocpi",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
pythonpath = [
  "." ,"ocpi"
]

[tool.coverage.run]
source = ["ocpi"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
